@@ -1,0 +1,2 @@
+<!ENTITY text "Text">
+<!ENTITY regExp "Regular expression">
