@@ -1,3 +1,10 @@
+* Less crowded replace bar (new input textbox with XBL).
+* New strings:
+  - bindings.dtd: all.
+* Removed strings:
+  - foxreplace.dtd: replaceBarInputRegExp.label,
+    replaceBarInputRegExp.accesskey.
+
 v0.7.2 (5-8-2008)
 * Corrected description in foxreplace.properties. It was cut with a \ at the
   end, creating a bug that didn't allow to import a replace list.
